# teste_branch

.circleci/: config.yml
1_pesquisa_e_desenvolvimento/: 1_Analise_dos_dados.ipynb  1_Divisao_dos_dados.ipynb  2_Analise_dos_dados.ipynb  2_engenharia_de_variaveis.ipynb  3_treinamento_do_modelo.ipynb  4_implementacao_do_pipeline.ipynb  5_gera_dados_para_testar_pacote.ipynb  5_gera_tab_test_API.ipynb  Divisao_dos_dados.ipynb  Site.txt
1_pesquisa_e_desenvolvimento/.ipynb_checkpoints/: 1_Analise_dos_dados-checkpoint.ipynb  2_Analise_dos_dados-checkpoint.ipynb  2_engenharia_de_variaveis-checkpoint.ipynb  3_treinamento_do_modelo-checkpoint.ipynb  4_implementacao_do_pipeline-checkpoint.ipynb  5_gera_tab_test_API-checkpoint.ipynb  Analise_dados-checkpoint.ipynb  Divisao_dos_dados-checkpoint.ipynb
1_pesquisa_e_desenvolvimento/dados/: README  Sobre os dados.txt  dados_test_prev_API.csv  dados_teste.csv
2_model_package/: MANIFEST.in  envio_pacote.sh  pyproject.toml  requirements.txt  setup.py
2_model_package/modelo/: VERSION  __main__.py  preve_modelo.py  treina_modelo.py
2_model_package/modelo/configuracoes/: caminhos.py  config.py
2_model_package/modelo/dados/: .gitkeep  dados_test_prev_API.csv  dados_treinamento.csv
2_model_package/modelo/processing/: gerenciamendo_dados.py  pipeline.py  transformacoes_dados.py  validacao.py
2_model_package/modelo_body_performance.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
2_model_package/teste_modelo/: test_previsoes.py
3_rest_API/: requirements.txt
3_rest_API_modelo/: requirements.txt
scripts/: envio_pacote.sh
(+17 files in other folders)
